rpi5/bookshelf/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bookshelf
  labels:
    app: bookshelf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookshelf
  serviceName: bookshelf
  template:
    metadata:
      name: bookshelf
      labels:
        app: bookshelf
    spec:
      containers:
        - name: bookshelf
          image: ghcr.io/pennydreadful/bookshelf:hardcover-v0.4.20.91@sha256:fd6183d0eacf1cac6ce3a0c8ff2b0d5af9ddf2101141f6c86c928a136c9b2d95
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8787
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
            - mountPath: /seedbox
              name: seedbox
            - mountPath: /etc/ssl/certs/ca-certificates.crt
              name: ca
              subPath: ca.crt
          readinessProbe:
            httpGet:
              port: http
              path: /
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 500Mi
            limits:
              memory: 1Gi
      securityContext:
        fsGroup: 3002
      restartPolicy: Always
      volumes:
        - name: data
          hostPath:
            path: /data
        - name: ca
          configMap:
            name: anshulg-ca
        - name: seedbox
          hostPath:
            path: /seedbox
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
